4.28 format adjust